--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -36,6 +36,10 @@ $chat-header-color: #253141;
                 font-size: 16px;
                 font-weight: bold;
                }
+               a{
+                color: #FFFFFF;
+                font-size: 13px;
+               }
                &__action{
                color:white;
                width: 70px;
