--- a/app/views/chats/index.html.haml
+++ b/app/views/chats/index.html.haml
@@ -3,6 +3,9 @@
   %div.chat__side
     %div.chat__side__header
       %h seo
+      = link_to "ログイン", new_user_session_path
+      = link_to "新規登録", new_user_registration_path
+      = link_to "ログアウト", destroy_user_session_path, method: :delete
       %div.chat__side__header__action
         %a.chat__side__header__action__pencil
           %i{class: "fa fa-pencil-square-o"}
