--- a/app/assets/stylesheets/group.scss
+++ b/app/assets/stylesheets/group.scss
@@ -1,3 +1,4 @@
+
 .chat-group-form {
   width: 980px;
   margin: 60px auto;
@@ -12,8 +13,11 @@
     font-size: 24px;
     text-align: center;
   }
+  .new_chat_group{
+    box-sizing: border-box;
 
-  .chat-group-form__errors {
+
+   .chat-group-form__errors {
     margin: 30px 0;
     padding: 20px 40px;
     border: 1px solid #ddd;
@@ -37,9 +41,8 @@
       padding: 0;
       font-size: 13px;
     }
-  }
 
-  .chat-group-form__field {
+   .chat-group-form__field {
     margin-top: 30px;
 
     .chat-group-form__field--left {
@@ -69,9 +72,9 @@
       padding: 10px 15px;
       box-sizing: border-box;
     }
-  }
+   }
 
-  .chat-group-user {
+   .chat-group-user {
     padding: 0 15px;
     line-height: 50px;
     font-size: 14px;
@@ -94,13 +97,15 @@
         color: #f05050;
       }
     }
-  }
+   }
 
-  .chat-group-form__action-btn {
+   .chat-group-form__action-btn {
     display: inline-block;
     padding: 12px 20px;
     color: #fff;
     background-color: #38aef0;
     border: 0;
-  }
+   }
+ }
+ }
 }
