--- a/app/assets/stylesheets/group.scss
+++ b/app/assets/stylesheets/group.scss
@@ -1,5 +1,6 @@
 .chat-group-form {
   width: 980px;
+  height: 300px;
   margin: 60px auto;
   padding: 40px;
   background-color: #fff;
@@ -38,7 +39,6 @@
       font-size: 13px;
     }
   }
-  .new_group{
   .chat-group-form__field {
     margin-top: 30px;
     .chat-group-form__field--left {
@@ -102,5 +102,4 @@
     background-color: #38aef0;
     border: 0;
   }
- }
 }
