--- a/app/assets/stylesheets/chats_index.scss
+++ b/app/assets/stylesheets/chats_index.scss
@@ -80,6 +80,7 @@ $chat-header-color: #253141;
             padding: 20px;
 
                  &__group{
+                  padding: 20px 20px;
                   font-size: 15px;
                 }
                  &__comment {
