--- a/app/views/groups/edit.html.haml
+++ b/app/views/groups/edit.html.haml
@@ -1,30 +1,25 @@
 .chat-group-form
-  %h1 新規チャットグループ
+  %h1 チャットグループ編集
   = form_for @group do |f|
     .chat-group-form__field.clearfix
       .chat-group-form__field--left
-        = f.label :name, "グループ名",{class: "chat-group-form__label"}
+        .chat-group-form__label
+          = f.label :name, "グループ名"
       .chat-group-form__field--right
         #chat_group_name.chat-group-form__input
           = f.text_field :name, placeholder: "グループ名を入力してください"
     .chat-group-form__field.clearfix
       .chat-group-form__field--left
-        .chat-group-form__label
-          / = f.label :id, "チャットメンバーを追加"
+        %label.chat-group-form__label{:for => "chat_group_チャットメンバーを追加"} チャットメンバーを追加
       .chat-group-form__field--right
         .chat-group-form__search.clearfix
-          #user-search-field.chat-group-form__input
-            / = f.text_field :id, placeholder: "追加したいユーザー名を入力してください"
+          / %input#user-search-field.chat-group-form__input{:placeholder => "追加したいユーザー名を入力してください", :type => "text"}/
         #user-search-result
     .chat-group-form__field.clearfix
       .chat-group-form__field--left
-        .chat-group-form__label
-          = f.label :name, "チャットメンバー"
-      .chat-group-form__field--right
-        #chat-group-users
-          #chat-group-user-22.chat-group-user.clearfix
-            = f.collection_check_boxes(:user_ids, User.all, :id, :name) do |b|
-              = b.label { b.check_box + b.text }
+        / %label.chat-group-form__label{:for => "chat_group_チャットメンバー"} チャットメンバー
+        = f.collection_check_boxes(:user_ids, User.all, :id, :name) do |b|
+          = b.label { b.check_box + b.text }
     .chat-group-form__field.clearfix
       .chat-group-form__field--left
       .chat-group-form__field--right
