Partial template and before action

--- a/app/views/groups/new.html.haml
+++ b/app/views/groups/new.html.haml
@@ -1,31 +1,4 @@
 .chat-group-form
   %h1 新規チャットグループ
   = form_for @group do |f|
-    .chat-group-form__field.clearfix
-      .chat-group-form__field--left
-        = f.label :name, "グループ名",{class: "chat-group-form__label"}
-      .chat-group-form__field--right
-        #chat_group_name.chat-group-form__input
-          = f.text_field :name, placeholder: "グループ名を入力してください"
-    .chat-group-form__field.clearfix
-      .chat-group-form__field--left
-        .chat-group-form__label
-          / = f.label :id, "チャットメンバーを追加"
-      .chat-group-form__field--right
-        .chat-group-form__search.clearfix
-          #user-search-field.chat-group-form__input
-            / = f.text_field :id, placeholder: "追加したいユーザー名を入力してください"
-        #user-search-result
-    .chat-group-form__field.clearfix
-      .chat-group-form__field--left
-        .chat-group-form__label
-          = f.label :name, "チャットメンバー"
-      .chat-group-form__field--right
-        #chat-group-users
-          #chat-group-user-22.chat-group-user.clearfix
-            = f.collection_check_boxes(:user_ids, User.all, :id, :name) do |b|
-              = b.label { b.check_box + b.text }
-    .chat-group-form__field.clearfix
-      .chat-group-form__field--left
-      .chat-group-form__field--right
-        = f.submit "Save",{class: "chat-group-form__action-btn"}
+    = render partial: "groupform", locals: {f: f}
