--- a/app/assets/stylesheets/chats_index.scss
+++ b/app/assets/stylesheets/chats_index.scss
@@ -76,11 +76,12 @@ $chat-header-color: #253141;
           }
           &__groups{
             list-style: none;
-            color: #fff;
             padding: 20px;
 
                  &__group{
-                  padding: 20px 20px;
+                  padding: 30px 30px;
+                  color: white;
+                  text-decoration: none;
                   font-size: 15px;
                 }
                  &__comment {
