--- a/app/assets/stylesheets/chats_index.scss
+++ b/app/assets/stylesheets/chats_index.scss
@@ -1,8 +1,7 @@
 @import "font-awesome";
-@import "./reset";
 
 $chat-header-color: #253141;
-
+$basic-color: #FFFFFF;
 @mixin icon{
   display: inline-block;
   font: normal normal normal 14px/1 FontAwesome;
@@ -13,7 +12,7 @@ $chat-header-color: #253141;
 
 @mixin flashMessage {
   background: #38AEF0;
-  color: white;
+  color: $basic-color;
   text-align: center;
 }
 
@@ -26,7 +25,7 @@ $chat-header-color: #253141;
 }
 
 .chat {
-  height: 750px;
+  height: 100%;
   min-width: 960px;
   background-color: gray;
 
@@ -41,12 +40,12 @@ $chat-header-color: #253141;
           background-color: $chat-header-color;
           padding: 20px;
                h {
-                color: #FFFFFF;
+                color: $basic-color;
                 font-size: 16px;
                 font-weight: bold;
                }
                a{
-                color: #FFFFFF;
+                color: $basic-color;
                 font-size: 20px;
                }
                &__action{
@@ -79,8 +78,8 @@ $chat-header-color: #253141;
             padding: 20px;
 
                  &__group{
-                  padding: 30px 30px;
-                  color: white;
+                  padding: 20px 20px;
+                  color: $basic-color;
                   text-decoration: none;
                   font-size: 15px;
                 }
@@ -102,12 +101,12 @@ $chat-header-color: #253141;
 
           &__header{
             height: 100px;
-            background-color: white;
+            background-color: $basic-color;
             padding: 0 40px 0 0;
             border-bottom: 1px solid #C0C0C0;
 
               &__left{
-                background-color: white;
+                background-color: $basic-color;
                 height: 50px;
                 max-width: 500px;
                 padding: 35px 0 15px 40px;
@@ -124,7 +123,7 @@ $chat-header-color: #253141;
 
               }
               &__right{
-                background-color: white;
+                background-color: $basic-color;
                 height: 40px;
                 width: 60px;
                 margin: 28px 20px 0 0;
@@ -145,6 +144,7 @@ $chat-header-color: #253141;
 
           }
           &__center{
+            height: 700px;
 
               &__message{
                 padding: 46px 0 40px 40px;
@@ -192,7 +192,7 @@ $chat-header-color: #253141;
                 padding: 20px 0 20px 40px;
 
                   &__area{
-                    background-color: white;
+                    background-color: $basic-color;
                     float:left;
 
                       .message__text{
@@ -206,7 +206,7 @@ $chat-header-color: #253141;
                       cursor: pointer;
                       width: 40px;
                       height: 50px;
-                      background-color: white;
+                      background-color: $basic-color;
                       float: right;
                       margin: 20px 0 0 0;
 
@@ -223,7 +223,7 @@ $chat-header-color: #253141;
                float: left;
                width: 100px;
                height: 60px;
-               color: white;
+               color: $basic-color;
                border: none;
                margin: 0 0 0 15px;
 
