--- a/app/views/groups/_chat_side.html.haml
+++ b/app/views/groups/_chat_side.html.haml
@@ -8,8 +8,8 @@
       = link_to edit_user_registration_path, class: "chat__side__header__action__gear" do
         %i.fa.fa-cog
   %ul.chat__side__groups
-    = @user_groups.each do |user_group|
-      = link_to "#{user_group.id}" ,class: "chat__side__groups__group" do
-        %li
+    - @user_groups.each do |user_group|
+      %li.chat__side__groups__group
+        = link_to "#{user_group.id}" ,class: "chat__side__groups__group" do
           = user_group.name
     %p.chat__side__groups__comment
