--- a/app/views/groups/_groupform.html.haml
+++ b/app/views/groups/_groupform.html.haml
@@ -4,7 +4,7 @@
       = f.label :name, "グループ名"
   .chat-group-form__field--right
     #chat_group_name.chat-group-form__input
-      = f.text_field :name, placeholder: "グループ名を入力してください"
+    = f.text_field :name, placeholder: "グループ名を入力してください",id:"chat_group_name",class: "chat-group-form__input"
 .chat-group-form__field.clearfix
   .chat-group-form__field--left
     %label.chat-group-form__label{for: "chat_group_チャットメンバーを追加"} チャットメンバーを追加
@@ -13,7 +13,7 @@
     #user-search-result
 .chat-group-form__field.clearfix
   .chat-group-form__field--left
-    = f.collection_check_boxes(:user_ids, User.all, :id, :name)
+  = f.collection_check_boxes(:user_ids, User.all, :id, :name)
 .chat-group-form__field.clearfix
   .chat-group-form__field--left
   .chat-group-form__field--right
