--- a/app/views/groups/new.html.haml
+++ b/app/views/groups/new.html.haml
@@ -1,4 +1,9 @@
 .chat-group-form
   %h1 新規チャットグループ
   = form_for @group do |f|
+    - if @group.errors.any?
+      .chat-group-form__errors
+        %h2 エラーが発生しました
+        %ul
+          %li 名前を入力してください
     = render partial: "groupform", locals: {f: f}
