Create new sass file

--- a/app/assets/stylesheets/_chats_index.scss
+++ b/app/assets/stylesheets/_chats_index.scss
@@ -1,20 +1,6 @@
 @import "font-awesome";
-
-$chat-header-color: #253141;
-$basic-color: #FFFFFF;
-@mixin icon{
-  display: inline-block;
-  font: normal normal normal 14px/1 FontAwesome;
-  font-size: inherit;
-  text-rendering: auto;
-}
-
-
-@mixin flashMessage {
-  background: #38AEF0;
-  color: $basic-color;
-  text-align: center;
-}
+@import "mixins";
+@import "variables";
 
 .alert-alert {
   @include flashMessage
