--- a/app/views/groups/_groupform.html.haml
+++ b/app/views/groups/_groupform.html.haml
@@ -1,20 +1,26 @@
-.chat-group-form__field.clearfix
-  .chat-group-form__field--left
-    .chat-group-form__label
-      = f.label :name, "グループ名"
-  .chat-group-form__field--right
-    #chat_group_name.chat-group-form__input
-    = f.text_field :name, placeholder: "グループ名を入力してください",id:"chat_group_name",class: "chat-group-form__input"
-.chat-group-form__field.clearfix
-  .chat-group-form__field--left
-    %label.chat-group-form__label{for: "chat_group_チャットメンバーを追加"} チャットメンバーを追加
-  .chat-group-form__field--right
-    .chat-group-form__search.clearfix
-    #user-search-result
-.chat-group-form__field.clearfix
-  .chat-group-form__field--left
-  = f.collection_check_boxes(:user_ids, User.all, :id, :name)
-.chat-group-form__field.clearfix
-  .chat-group-form__field--left
-  .chat-group-form__field--right
-    = f.submit "Save",{class: "chat-group-form__action-btn"}
+= form_for @group do |f|
+  - if @group.errors.any?
+    .chat-group-form__errors
+      %h2 エラーが発生しました
+      %ul
+        %li 名前を入力してください
+  .chat-group-form__field.clearfix
+    .chat-group-form__field--left
+      .chat-group-form__label
+        = f.label :name, "グループ名"
+    .chat-group-form__field--right
+      #chat_group_name.chat-group-form__input
+      = f.text_field :name, placeholder: "グループ名を入力してください",id:"chat_group_name",class: "chat-group-form__input"
+  .chat-group-form__field.clearfix
+    .chat-group-form__field--left
+      %label.chat-group-form__label{for: "chat_group_チャットメンバーを追加"} チャットメンバーを追加
+    .chat-group-form__field--right
+      .chat-group-form__search.clearfix
+      #user-search-result
+  .chat-group-form__field.clearfix
+    .chat-group-form__field--left
+    = f.collection_check_boxes(:user_ids, User.all, :id, :name)
+  .chat-group-form__field.clearfix
+    .chat-group-form__field--left
+    .chat-group-form__field--right
+      = f.submit "Save",{class: "chat-group-form__action-btn"}
