--- a/app/assets/stylesheets/_group.scss
+++ b/app/assets/stylesheets/_group.scss
@@ -1,8 +1,10 @@
+@import "variables";
+
 .chat-group-form {
   width: 980px;
   margin: 60px auto;
   padding: 40px;
-  background-color: #fff;
+  background-color: basic-color;
   border: 1px solid #ddd;
   border-radius: 5px;
   box-sizing: border-box;
@@ -12,12 +14,8 @@
     font-size: 24px;
     text-align: center;
   }
-  form {
-    box-sizing: border-box;
-    height: 250px;
-    line-height:50px;
-  }
-  .chat-group-form__errors {
+
+  &__errors {
     margin: 30px 0;
     padding: 20px 40px;
     border: 1px solid #ddd;
@@ -44,7 +42,8 @@
   }
 
   .chat-group-form__field {
-    margin: 50px 0;
+    margin-top: 30px;
+    @include clearfix;
 
     &--left {
       float: left;
@@ -55,7 +54,6 @@
     }
 
     &--right {
-      box-sizing: border-box;
       float: right;
       width: 70%;
     }
@@ -91,11 +89,11 @@
       display: inline-block;
       cursor: pointer;
 
-      &.chat-group-user__btn--add {
+      &--add {
         color: #38aef0;
       }
 
-      &.chat-group-user__btn--remove {
+      &--remove {
         color: #f05050;
       }
     }
