--- a/app/assets/stylesheets/_mixins.scss
+++ b/app/assets/stylesheets/_mixins.scss
@@ -3,6 +3,10 @@
   font: normal normal normal 14px/1 FontAwesome;
   font-size: inherit;
   text-rendering: auto;
+  margin: 15px 0 15px 3px;
+  line-height: 28px;
+  text-align: none;
+  cursor: auto;
 }
 
 
