--- a/app/views/groups/index.html.haml
+++ b/app/views/groups/index.html.haml
@@ -1,17 +1,16 @@
-.chat
-  .chat__side
-    .chat__side__header
-      %h
-        = current_user.name
-      .chat__side__header__action
-        = link_to new_group_path , class: "chat__side__header__action__pencil" do
-          %i.fa.fa-pencil-square-o
-        = link_to edit_user_registration_path, class: "chat__side__header__action__gear" do
-          %i.fa.fa-cog
-    %ul.chat__side__groups
-      = @user_groups.each do |user_group|
-        = link_to "groups/#{user_group.id}" do
+.screen
+  .chat
+    .chat__side
+      .chat__side__header
+        %h5= current_user.name
+        .chat__side__header__action
+          = link_to new_group_path , class: "chat__side__header__action__pencil" do
+            %i.fa.fa-pencil-square-o
+          = link_to edit_user_registration_path, class: "chat__side__header__action__gear" do
+            %i.fa.fa-cog
+      %ul.chat__side__groups
+        - @user_groups.each do |user_group|
           %li.chat__side__groups__group
-            = user_group.name
-      %p.chat__side__groups__comment
-  .chat__main
+            = link_to "groups/#{user_group.id}" ,class: "chat__side__groups__group" do
+              = user_group.name
+    .chat__main
