--- a/app/views/groups/show.html.haml
+++ b/app/views/groups/show.html.haml
@@ -1,23 +1,25 @@
-.chat
-  = render partial: "chat_side"
-  .chat__main
-    .chat__main__header
-      .chat__main__header__left
-        %p.chat__main__header__left__title
-        = @group.name
-        %p.chat__main__header__left__members
-      = link_to "#{@group.id}/edit" do
+.screen
+  .chat
+    = render partial: "chat_side"
+    .chat__main
+      .chat__main__header
+        .chat__main__header__left
+          %h2= @group.name
+          %p.chat__main__header__left__members
+            - @users.each do |user|
+              =user.name
         .chat__main__header__right
-          %p.chat__main__header__right__edit Edit
-    .chat__main__center
-      %ul.chat__main__center__message
-        %li.chat__main__center__message__name seo
-        %li.chat__main__center__message__date 2016/09/16 06:16:55
-        %li.chat__main__center__message__text Hello World!
-    .chat__main__footer
-      %form.chat__main__footer__newmessage
-        .chat__main__footer__newmessage__area
-          %textarea{ class: "message__text", placeholder: "type a message"}
-          %label{class: "message__image"}
-            %i{class: "fa fa-image"}
-        %input{type: "submit",value: "Send"}
+          = link_to "#{@group.id}/edit",class: "chat__main__header__right__edit" do
+            %p Edit
+      .chat__main__center
+        %ul.chat__main__center__message
+          %li.chat__main__center__message__name seo
+          %li.chat__main__center__message__date 2016/09/16 06:16:55
+          %li.chat__main__center__message__text Hello World!
+      .chat__main__footer
+        %form.chat__main__footer__newmessage
+          .chat__main__footer__newmessage__area
+            %textarea{ class: "message__text", placeholder: "type a message"}
+            %label{class: "message__image"}
+              %i{class: "fa fa-image"}
+          %input{type: "submit",value: "Send"}
