--- a/app/views/groups/_chat_side.html.haml
+++ b/app/views/groups/_chat_side.html.haml
@@ -7,7 +7,7 @@
       = link_to edit_user_registration_path, class: "chat__side__header__action__gear" do
         %i.fa.fa-cog
   %ul.chat__side__groups
-    - @user_groups.each do |user_group|
+    - current_user.groups.each do |user_group|
       %li.chat__side__groups__group
         = link_to  group_messages_path(user_group.id), class: "chat__side__groups__group" do
           %p.chat__side__groups__user= user_group.name
