--- a/app/views/groups/_group_form.html.haml
+++ b/app/views/groups/_group_form.html.haml
@@ -29,9 +29,10 @@
         = f.label :name, "チャットメンバー"
     .chat-group-form__field--right
       #chat-group-users
-        .chat-group-user.clearfix
+        .chat-group-users.clearfix
+          %input{ type: "hidden", name: "group[user_ids][]", value: current_user.id }
           %p.chat-group-user__name
-            = @group.users.name
+            = current_user.name
   .chat-group-form__field.clearfix
     .chat-group-form__field--left
     .chat-group-form__field--right
